tests/negative/CompileBlocks/WrongKindExpressionCompileBlock.juvix
module WrongKindExpressionCompileBlock;

module A;
end;

compile A {
ghc -> "X";
};

end;
